# arrow

./: .gitignore  CMakeLists.txt  README.md  arrow.files
misc/: graphicsScene2.py
notes/: design.md  todo.md
src/: AppCore.cpp  AppCore.h  Application.cpp  Application.h  GLGui.cpp  GLGui.h  Node.cpp  Node.h  NodeTypes.h  PlugTypes.h  SFMLHander.h  SFMLHandler.cpp  ShaderObject.cpp  ShaderObject.h  TextEngine.cpp  TextEngine.h  UINodeView.cpp  UINodeView.h  UIView.cpp  UIView.h  UIViewController.cpp  UIViewController.h  UIViewPort.cpp  UIViewPort.h  UIViewPortController.cpp  UIViewPortController.h  UIWindow.cpp  UIWindow.h  configure.bat  configureDebug.bat  configureRelease.bat  main.cpp  runtimePolymorphism.hpp  sparestack.hpp  storeCode.h  textShader.frag  textShader.vert
src/glm/: CMakeLists.docx
